<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.toshiba.parkme.activity.BookActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/login_page">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.toshiba.parkme.activity.BookActivity"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            android:text="DATE :"
            android:textSize="32dp"
            android:id="@+id/date_textview" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/date_textview"
            android:layout_alignParentRight="true"
            android:inputType="date"
            android:id="@+id/editDate"
            android:padding="16dp"/-->


        <TextView
            android:id="@+id/From1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="25dp"
            android:padding="8dp"
            android:text="@string/from"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/fromtime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/From1"
            android:layout_marginEnd="66dp"
            android:padding="16dp"
            android:text="@string/fromtime"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/To1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="105dp"
            android:text="@string/number_of_hours"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/editTo1"
            android:layout_width="72dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/To1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:inputType="number" />

        <!--TextView
            android:id="@+id/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="177dp"
            android:padding="8dp"
            android:text="P.S. Please Select Exit Time (24 hours format) "
            android:textSize="16sp" />-->




        <Button
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/To1"
            android:layout_margin="24dp"
            android:text="BOOK AND PAY" />

        <Button
            android:id="@+id/backbook1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check1"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:text="@string/back_to_profile_1" />


    </RelativeLayout>
</ScrollView>

    <!-- android:layout_below="@id/date_textview"-->
    <!--<EditText-->
    <!--android:id="@+id/editFrom"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/editDate"-->
    <!--android:layout_toEndOf="@+id/From"-->
    <!--android:hint="HH:MM"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:inputType="time"-->
    <!--android:padding="16dp" />-->


    <!--Spinner
        android:id="@+id/editFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDate"
        android:layout_toEndOf="@+id/From"
        android:layout_margin="16dp">

    </Spinner-->

    <!--android:layout_below="@id/editFrom"-->
    <!--<EditText-->
    <!--android:id="@+id/editTo"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/editFrom"-->
    <!--android:layout_toEndOf="@id/From"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:hint="NUMBER OF HOURS"-->
    <!--android:padding="16dp"-->
    <!--android:inputType="number" />-->

    <!--<Spinner-->
    <!--android:id="@+id/editTo"-->
    <!--android:layout_width="72dp"-->
    <!--android:layout_height="40dp"-->
    <!--android:layout_alignBottom="@+id/To"-->
    <!--android:layout_centerHorizontal="true">-->

    <!--</Spinner>-->